force-app/main/default/objects/TubeOD__c/TubeOD__c.object-meta.xml
<CustomObject>
    <description>Tube outside diameter</description>
    <label>Tube OD</label>
    <nameField>
        <label>Tube OD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tubes OD</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>