force-app/main/default/objects/TubeOD__c/fields/DCondNPS__c.field-meta.xml
<CustomField>
    <fullName>DCondNPS__c</fullName>
    <label>DCondNPS</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>