force-app/main/default/objects/TubeOD__c/fields/DStr__c.field-meta.xml
<CustomField>
    <fullName>DStr__c</fullName>
    <formula>IF(IsRound__c=true,  &apos;ø&apos; + TEXT(OD_mm__c),  Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DStr</label>
    <type>Text</type>
</CustomField>