force-app/main/default/objects/TubeOD__c/fields/H__c.field-meta.xml
<CustomField>
    <fullName>H__c</fullName>
    <label>H</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>