force-app/main/default/objects/TubeOD__c/fields/H_mm__c.field-meta.xml
<CustomField>
    <fullName>H_mm__c</fullName>
    <label>H_mm</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>