force-app/main/default/objects/TubeOD__c/fields/IsRound__c.field-meta.xml
<CustomField>
    <fullName>IsRound__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsRound</label>
    <type>Checkbox</type>
</CustomField>