force-app/main/default/objects/TubeOD__c/fields/L__c.field-meta.xml
<CustomField>
    <fullName>L__c</fullName>
    <label>L</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>