force-app/main/default/objects/TubeOD__c/fields/MaxOD__c.field-meta.xml
<CustomField>
    <fullName>MaxOD__c</fullName>
    <description>Maximum outside diameter in millimeters</description>
    <inlineHelpText>Maximum outside diameter in millimeters</inlineHelpText>
    <label>Max OD</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>