force-app/main/default/objects/TubeOD__c/fields/MinOD__c.field-meta.xml
<CustomField>
    <fullName>MinOD__c</fullName>
    <description>Minimum outside diameter in millimeters</description>
    <inlineHelpText>Minimum outside diameter in millimeters</inlineHelpText>
    <label>Min OD</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>