force-app/main/default/objects/TubeOD__c/fields/OD_inch__c.field-meta.xml
<CustomField>
    <fullName>OD_inch__c</fullName>
    <description>Precise outside diameter in inches</description>
    <inlineHelpText>Precise outside diameter in inches</inlineHelpText>
    <label>inch</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>