force-app/main/default/objects/TubeOD__c/fields/OD_mm__c.field-meta.xml
<CustomField>
    <fullName>OD_mm__c</fullName>
    <description>Precise outside diameter in millimeters</description>
    <inlineHelpText>Precise outside diameter in millimeters</inlineHelpText>
    <label>mm</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>