force-app/main/default/objects/TubeOD__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OD_mm__c</columns>
    <columns>OD_inch__c</columns>
    <columns>NPS__c</columns>
    <columns>H__c</columns>
    <columns>L__c</columns>
    <columns>ID_ERP__c</columns>
    <columns>IsRound__c</columns>
    <columns>DStr__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NPS__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>